--- a/views/index.ejs
+++ b/views/index.ejs
@@ -394,7 +394,7 @@
 
     <!-- Footer section -->
     <%- include("partials/footer.ejs") %>
-    
-    <script src="js/script.js"></script>
+
+    <script src="../assets/js/script.js"></script>
   </body>
 </html>
