--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<section class="bg-cover bg-center h-[85vh] relative" style="background-image: url('/images/background.jpg');">
+<section class="bg-cover bg-center h-[85vh] relative" style="background-image: url('/images/background.webp');">
   <!-- Dark Overlay -->
   <div class="absolute inset-0 bg-black opacity-50"></div>
   <!-- Content -->
