--- a/views/partials/header_nav.ejs
+++ b/views/partials/header_nav.ejs
@@ -9,7 +9,7 @@
       <a href="/" class="text-white hover:text-theme_color">About</a>
       <a href="/" class="text-white hover:text-theme_color">Services</a>
       <a href="/" class="text-white hover:text-theme_color">Gallery</a>
-      <a href="contact" class="text-white hover:text-theme_color">
+      <a href="/contact" class="text-white hover:text-theme_color">
         <button class="px-5 py-2 bg-[#fe9901] hover:bg-[#eaa947] rounded-full">
           Contact us
         </button>
