updating contact page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,8 +6,6 @@
     <title>Home - My Interiors</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <!-- FontAwesome CDN -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -16,14 +14,16 @@
   </head>
   <body>
 
+    <h1>Hello</h1> 
+
     <!-- intro section -->
-    <%- include("partials/header.ejs") %>
+    <!-- <%- include("partials/header.ejs") %> -->
     
     <!-- contact form -->
-    <%- include("components/contact/contactForm.ejs") %>
+    <!-- <%- include("components/contact/contactForm.ejs") %> -->
 
     <!-- Footer section -->
-    <%- include("partials/footer.ejs") %>
+    <!-- <%- include("partials/footer.ejs") %> -->
     
     <script src="js/script.js"></script>
   </body>
