--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -14,16 +14,14 @@
   </head>
   <body>
 
-    <h1>Hello</h1> 
-
     <!-- intro section -->
-    <!-- <%- include("partials/header.ejs") %> -->
+    <%- include("partials/header.ejs") %>
     
     <!-- contact form -->
-    <!-- <%- include("components/contact/contactForm.ejs") %> -->
+    <%- include("components/contact/contactForm.ejs") %>
 
     <!-- Footer section -->
-    <!-- <%- include("partials/footer.ejs") %> -->
+    <%- include("partials/footer.ejs") %>
     
     <script src="js/script.js"></script>
   </body>
